--- a/roles/bunkerweb/templates/env.j2
+++ b/roles/bunkerweb/templates/env.j2
@@ -21,6 +21,8 @@ BAD_BEHAVIOR_STATUS_CODES=400 401 403 404 405 444
 BAD_BEHAVIOR_THRESHOLD=25
 REVERSE_PROXY_HOST_999=http://authelia:9091/api/verify
 REVERSE_PROXY_HEADERS_999=X-Original-URL $scheme://$http_host$request_uri;Content-Length ""
+USE_WHITELIST=no
+USE_BLACKLIST=no
 # Authelia
 {{ authelia_host }}_REVERSE_PROXY_URL=/
 {{ authelia_host }}_REVERSE_PROXY_HOST=http://authelia:9091
